--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -64,16 +64,16 @@
     <!-- Journal/Book title and date -->
 	{% assign award_text = "" %}
 	{%- if entry.award -%}
-      {% assign award_text = entry.award | append: ', ' %}
+      {% assign award_text = entry.award | prepend: '; ' %}
     {%- endif -%}
     {% assign proceedings = "inproceedings,incollection" | split: ','%} {% assign thesis = "thesis,mastersthesis,phdthesis" | split: ','%} {% if
-    entry.type == "article" -%} {%- capture entrytype -%}{{award_text}}<em>{{entry.journal}}</em
-    >{%- endcapture -%} {%- elsif proceedings contains entry.type -%} {%- capture entrytype -%}{{award_text}}In <em>{{entry.booktitle}}</em>
-    {%- endcapture -%} {%- elsif thesis contains entry.type -%} {%- capture entrytype -%}{{award_text}}<em>{{entry.school}}</em> {%- endcapture -%} {%- else -%} {%-
+    entry.type == "article" -%} {%- capture entrytype -%}<em>{{entry.journal}}</em
+    >{%- endcapture -%} {%- elsif proceedings contains entry.type -%} {%- capture entrytype -%}In <em>{{entry.booktitle}}</em>
+    {%- endcapture -%} {%- elsif thesis contains entry.type -%} {%- capture entrytype -%}<em>{{entry.school}}</em>{%- endcapture -%} {%- else -%} {%-
     capture entrytype -%}{%- endcapture -%} {%- endif -%} {%- if entry.month -%} {%- capture entrymonth -%}{{ " " }}{{ entry.month | capitalize }}{%-
     endcapture -%} {%- endif -%} {%- if entry.year -%} {%- capture entryyear -%}{{ " " }}{{entry.year}}{%- endcapture -%} {%- endif -%} {% assign
     entrytype_text = entrytype | strip_html | strip %} {%- capture periodical -%}{{ entrytype }}{%- if entrytype_text != "" and entryyear != "" -%},
-    {%- endif -%}{{ entrymonth }}{{ entryyear }}{%- endcapture -%}
+    {%- endif -%}{{ entrymonth }}{{ entryyear }}<span style="color: #f29105">{{award_text}}</span>{%- endcapture -%}
     <div class="periodical">{{ periodical | strip }}</div>
     <div class="periodical">{{ entry.note | strip }}</div>
 
